# Hierarchical-Reasoning-on-Knowledge-Graphs

./: .gitignore  README.md  env_lock.yml  environment.yml  global_constants.py  main.ipynb  pyproject.toml  test.ipynb
qagnn/: run_qagnn__csqa.sh
qagnn/logs/: train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_165208.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_170557.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_171839.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_172304.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_172524.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_172732.log.txt  train_csqa__enc-roberta-large__k5__gnndim200__bs64__seed0__20240320_173213.log.txt  train_csqa__enc-roberta__k5__gnndim200__bs64__seed0__20240320_170711.log.txt  train_csqa__enc-roberta__k5__gnndim200__bs64__seed0__20240320_171120.log.txt  train_csqa__enc-roberta__k5__gnndim200__bs64__seed0__20240320_171406.log.txt  train_csqa__enc-roberta__k5__gnndim200__bs64__seed0__20240320_171709.log.txt
qagnn/modeling/: modeling_encoder.py  modeling_qagnn.py
