[tool.poetry]
name = "hierarchical reasoning on knowledge graphs"
version = "0.1.0"
description = ""
authors = ["Ameer Arsala <ameer.arsala03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
munch = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
